resolves muwm-3269. fixes new student checklist notice headers on IE

--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -678,7 +678,7 @@ body {
 				.card_list {margin-top: 10px; margin-bottom: 15px; line-height: 25px;}
 				.notice-title { display: block; font-weight: bold; margin-bottom: 2px; font-size: 1.1em;}
 				.notice-content { padding-bottom: 2em;}
-				.notice-body-with-title {display: inline-block;  margin-top: -1em;}
+				.notice-body-with-title {display: inline-block;  /*margin-top: -1em;*/}
 
 				// pre
 				div.pre, div.post { margin-left: 2.2em;}
@@ -704,7 +704,7 @@ body {
 			h3 {margin-bottom: 6px;}
 			.notice-title {display:none;}
 			// adding this display inline-block to adjust for &nbsp; that is in front of body text
-			.notice-body-with-title {display: inline-block;  margin-top: -1em; margin-bottom: 2em;}
+			.notice-body-with-title {display: inline-block;  /*margin-top: -1em;*/ margin-bottom: 2em;}
 			.non-notice-body-with-title {display: inline-block; margin-top: .4em; margin-bottom: 2em;}
 		}
 
@@ -715,7 +715,7 @@ body {
 			h3 {margin-bottom: 25px;}
 			.notice-title { display: block; font-weight: bold; margin-bottom: 2px; font-size: 1.1em;}
 			.notice-content { padding-bottom: 2em;}
-			.notice-body-with-title {display: inline-block;  margin-top: -1.5em;}
+			.notice-body-with-title {/*display: inline-block;  margin-top: -1.5em;*/}
 			.non-notice-body-with-title {display: inline-block;}
 		}
 
@@ -726,7 +726,7 @@ body {
 		#IntStud {
 			h3 {margin-bottom: 6px;}
 			.notice-title {display:none;}
-			.notice-body-with-title {display: inline-block; margin-top: -1em; margin-bottom: 2em;}
+			.notice-body-with-title {display: inline-block; /*margin-top: -1em;*/ margin-bottom: 2em;}
 		}
 
 
